--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,13 +53,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\ComboUI.cs" />
-     <Compile Include="Assets\MultiplierUI.cs" />
-     <Compile Include="Assets\ObstacleTriggerHandler.cs" />
-     <Compile Include="Assets\Score.cs" />
-     <Compile Include="Assets\ScoreUI.cs" />
      <Compile Include="Assets\Scripts\CameraController.cs" />
+     <Compile Include="Assets\Scripts\ComboUI.cs" />
+     <Compile Include="Assets\Scripts\MultiplierUI.cs" />
+     <Compile Include="Assets\Scripts\ObstacleTriggerHandler.cs" />
      <Compile Include="Assets\Scripts\PlayerController.cs" />
+     <Compile Include="Assets\Scripts\Score.cs" />
+     <Compile Include="Assets\Scripts\ScoreUI.cs" />
  <Reference Include="Unity.TextMeshPro.Editor">
  <HintPath>/Users/vincentcarlino/geometry-hero/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
  </Reference>
