Too many things

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,6 +53,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\AudioController.cs" />
+     <Compile Include="Assets\CameraMovement.cs" />
      <Compile Include="Assets\Scripts\CameraController.cs" />
      <Compile Include="Assets\Scripts\ComboUI.cs" />
      <Compile Include="Assets\Scripts\EndLevel.cs" />
